--- a/templates/add_author.html
+++ b/templates/add_author.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="static/style.css">
   </head>
   <body>
 
@@ -17,6 +18,7 @@
   <input type="date" id="date_of_death" name="date_of_death"><br><br>
   <input type="submit" value="Add Author"> 
   </form>
-
+  <br><br>
+  <a href="/"><button>Back Home</button></a>
   </body>
 </html>
