--- a/templates/notification.html
+++ b/templates/notification.html
@@ -2,13 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>New {{ obj_type }}</title>
+    <title> New {{ obj_type }}</title>
+    <link rel="stylesheet" href="static/index.css">
 </head>
 <body>
-    <h1>New {{ obj_type }} </h1>
-    <p>{% print(obj) %}</p>
-    <a href="/"><button>Back Home</button></a>
-    <a href="/add_author"><button>Add new Author</button></a>
-    <a href="/add_book"><button>Add new Book</button></a>
+
+<!-- Main Wrapper to center everything -->
+<div class="wrapper">
+    <!-- Title -->
+    <h1> New {{ obj_type }} </h1>
+
+    <!-- Content container aligned to the left -->
+    <div class="content">
+        <p>{% print(obj) %}</p>
+        <a href="/"><button>Back Home</button></a>
+        <a href="/add_author"><button>Add new Author</button></a>
+        <a href="/add_book"><button>Add new Book</button></a>
+    </div>
+</div>
+
 </body>
 </html>
